added new paragraph

--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,9 @@
 	<title>hello ali</title>
 </head>
 <body>
-	<h1> my name is ali............................ </h1>
+	<h1> my name is ali </h1>
+	<pre> i am a cyber security student  </pre>
+	
 
 </body>
 </html>
