--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<h1> my name is ali </h1>
-	<pre> i am a cyber security student  </pre>
+	<pre> i am a cyber security student , 5th semester </pre>
 
 
 </body>
